--- a/index.html
+++ b/index.html
@@ -4,45 +4,67 @@
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=yes">
 		<meta charset="utf-8">
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="jQueryUI/jquery-ui.css"/>
+		<!link rel="stylesheet" href="css/jquery-ui.css"/>
 		<link rel="stylesheet" href="css/flexslider.css"/>
 		<link rel="stylesheet" href="css/style.css"/>
 		<link rel="stylesheet" href="css/mStyle.css" media="all and (min-width: 320px) and (max-width: 1024px)"/>
 	</head>
 	<body>
 		<main>
+			<div id="items">
+				<a class="link items" id="item1" href="index.html">Read our FAQ</a>
+				<a class="link items" id="item2" href="index.html">Post a Support Ticket</a>
+				<a class="link items" id="item3" href="index.html">Orders & Shipping</a>
+			</div>
 		<div hidden id="hover"></div>
 			<div hidden id="popup">
 				<div id="regText">Register your interest<button id="cancel">cancel</button></div>
+				<div id="divider"></div>
 				<left>
 					<form id="form">
+						<div class="question">
 						What's your name?<br>
 						<input type="text"><br>
+						</div>
+						<div class="question">
 						What product would you like?<br>
-						<input list="products" value="Please choose a product..."><br>
+						<input list="products" placeholder="Please choose a product..."><br>
 						<datalist id="products">
 							<option value="First"></option>
 							<option value="Second"></option>
 							<option value="Third"></option>
 						</datalist>
+						</div>
+						<div class="question">
 						Where are you from?<br>
-						<input list="search" type="search"><br>
+						<input list="search"><br>
 						<datalist id="search">
 							<option value="Austria"></option>
 							<option value="Australia"></option>
 							<option value="Estonia"></option>
 						</datalist>
+						</div>
+						<div class="question">
 						Could you upload a picture of your animal?<br>
 						<input type="file"><br>
+						</div>
+						<div class="question">
 						Could you upload a picture of your animal?<br>
 						<input type="radio">A dog person<br>
 						<input type="radio">A cat person<br>
+						</div>
+						<div class="question">
 						When would you like to receive the product?<br>
-						<input type="date"> to <input type="date"><br>
+						<input type="text" id="startDate"> to <input type="text" id="endDate"><br>
+						</div>
+						<div class="question">
 						Any additional comments?<br>
 						<textarea></textarea><br>
+						</div>
+						<div class="question">
 						<input type="checkbox"> I have read your
 						<a href="index.html" id="terms">Terms</a> about all of this<br>
+						</div>
 						<input id="sendBtn" class="marginBtn" type="button" value="SEND YOUR REQUEST">
 					</form>
 				</left>
@@ -73,11 +95,6 @@
 							<td>Australia</td>
 							<td>1-3 months</td>
 						</tr>
-						<tr>
-							<td></td>
-							<td></td>
-						</tr>
-
 					</table>
 				</right>
 			</div>
@@ -87,10 +104,7 @@
 				<a class="link" href="index.html">Order Yours</a>
 				<a class="link" href="index.html">About Us</a>
 				<a class="link" href="index.html">Support</a>
-				<a class="link items" id="dropDown" href=""><img src="images/Rectangle-2.png"></a>
-					<a class="link items" id="item1" href="index.html">Read our FAQ</a>
-					<a class="link items" id="item2" href="index.html">Post a Support Ticket</a>
-					<a class="link items" id="item3" href="index.html">Orders & Shipping</a>
+				<a class="link" id="dropDown" href=""><img src="images/Rectangle-2.png"></a>
 				<a class="link" href="index.html">Get in touch with us</a>
 				<img id="fb" src="images/Vector-Smart-Object1.png">
 			</menu>
@@ -152,7 +166,7 @@
 		</footer>
 		<script src="js/jquery.js"></script>
 		<script src="js/jquery.flexslider.js"></script>
-		<script src="jQueryUI/jquery-ui.js"></script>
+		<script src="js/jquery-ui.js"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?v=3"></script>
 		<script src="js/script.js"></script>
 		<script>google.maps.event.addDomListener(window, 'load', initialize);</script>
